--- a/Tutorial4/Source/TranslateApp/app/src/main/AndroidManifest.xml
+++ b/Tutorial4/Source/TranslateApp/app/src/main/AndroidManifest.xml
@@ -22,11 +22,22 @@
             android:name=".RegisterActivity"
             android:label="Sentiment Analysis"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".TranslateActivity"
             android:label="Sentiment Analysis"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
